--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="style.css" media="screen" type="text/css">
 </head>
 <body>
+  <video id="background-video" autoplay muted loop>
+    <source src="video.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
   <div id="whale"></div>
   <script src="index.js">
 </script>
